解决报错问题
