# lingua_exchange/internal/handler/users.go
@@ -71,7 +71,7 @@ func NewUsersHandler() UsersHandler {
 // @Produce json
 // @Param data body types.LoginRequest true "users information"
 // @Success 200 {object} types.LoginReply{}
-// @Router /api/v1/login [post]
+// @Router /api/v1/auth [post]
 // @Security BearerAuth
 func (h *usersHandler) LoginOrRegister(c *gin.Context) {
 	form := &types.LoginRequest{}
